feat: Add resume change button and success popup
Features added:
1. Resume Re-upload Button:
   - Added 'Change' button in Resume & Analysis section
   - Users can now re-upload/update their resume anytime
   - Reuses existing handleFileUpload function
   - Shows upload progress when changing resume

2. Success Popup Modal:
   - Beautiful centered modal popup on Save Configuration
   - Green gradient theme with success icon
   - Auto-closes after 3 seconds
   - Manual close with 'Got it!' button
   - Smooth fade-in and slide-up animations

3. Windows App Fixes:
   - Fixed Auth.tsx API URL (production → localhost)
   - Added .env.production to electron-builder.yml
   - Server will now start properly with DB credentials
   - Login button now works correctly

All features tested and working!

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -18,6 +18,7 @@ files:
   - node_modules/**/*
   - package.json
   - .env
+  - .env.production
 
 # Keep asar enabled but unpack native modules and server files
 asar: true
@@ -29,6 +30,7 @@ asarUnpack:
   - "server/**/*"
   - "node_modules/**/*"
   - ".env"
+  - ".env.production"
 
 # Extra resources (server files, etc.)
 extraResources:
