add other features

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -38,6 +38,8 @@ extraResources:
     to: server
     filter:
       - "**/*"
+  - from: .env
+    to: .env
   - from: node_modules/puppeteer/.local-chromium
     to: .local-chromium
     filter:
