--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "main": "electron/main.js",
   "scripts": {
+    "postinstall": "node scripts/setup-puppeteer.js",
     "dev": "vite",
     "build": "vite build --config vite.config.electron.ts",
     "preview": "vite preview",
@@ -17,7 +18,8 @@
     "electron:build:win": "npm run build && electron-builder --win --config electron-builder.yml",
     "electron:build:mac": "npm run build && electron-builder --mac --config electron-builder.yml",
     "electron:build:all": "npm run build && electron-builder --win --mac --config electron-builder.yml",
-    "electron:start": "electron ."
+    "electron:start": "electron .",
+    "setup:puppeteer": "node scripts/setup-puppeteer.js"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
