--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "server": "node server/index.js",
     "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "electron:dev": "cross-env NODE_ENV=development concurrently \"npm run server\" \"vite --config vite.config.electron.ts\" \"wait-on http://localhost:5173 && electron .\"",
-    "electron:build": "npm run build && electron-builder --config electron-builder.yml",
-    "electron:build:win": "npm run build && electron-builder --win --config electron-builder.yml",
-    "electron:build:mac": "npm run build && electron-builder --mac --config electron-builder.yml",
-    "electron:build:all": "npm run build && electron-builder --win --mac --config electron-builder.yml",
+    "prebuild": "npx puppeteer browsers install chrome",
+    "electron:build": "npm run prebuild && npm run build && electron-builder --config electron-builder.yml",
+    "electron:build:win": "npm run prebuild && npm run build && electron-builder --win --config electron-builder.yml",
+    "electron:build:mac": "npm run prebuild && npm run build && electron-builder --mac --config electron-builder.yml",
+    "electron:build:all": "npm run prebuild && npm run build && electron-builder --win --mac --config electron-builder.yml",
     "electron:start": "electron .",
     "setup:puppeteer": "node scripts/setup-puppeteer.js"
   },
@@ -43,6 +44,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "framer-motion": "^12.23.25",
+    "glob": "^11.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.556.0",
